Homework7/manifests/NotificationService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework7notificationservice
  labels:
    app: homework7notificationservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework7notificationservice
  template:
    metadata:
      labels:
        app: homework7notificationservice
    spec:
      containers:
      - name: homework7notificationservice
        image: flash1200/homework7_notificationservice:firstversion
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
