Homework7/manifests/NotificationService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework7notificationservice
  labels:
    app: homework7notificationservice
spec:
  type: LoadBalancer
  ports:
  - name: homework7-http
    port: 91
    protocol: TCP
    targetPort: 8080
  - name: homework7-https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: homework7notificationservice
